[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/bot_animation.gd" type="Script" id=1]
[ext_resource path="res://assets/bots/hover_bot/base/1.png" type="Texture" id=2]
[ext_resource path="res://assets/bots/hover_bot/base/2.png" type="Texture" id=3]
[ext_resource path="res://assets/bots/hover_bot/base/3.png" type="Texture" id=4]
[ext_resource path="res://assets/bots/hover_bot/base/4.png" type="Texture" id=5]
[ext_resource path="res://assets/bots/hover_bot/base/5.png" type="Texture" id=6]
[ext_resource path="res://assets/bots/hover_bot/primary_color/1.png" type="Texture" id=7]
[ext_resource path="res://assets/bots/hover_bot/primary_color/2.png" type="Texture" id=8]
[ext_resource path="res://assets/bots/hover_bot/primary_color/3.png" type="Texture" id=9]
[ext_resource path="res://assets/bots/hover_bot/primary_color/4.png" type="Texture" id=10]
[ext_resource path="res://assets/bots/hover_bot/primary_color/5.png" type="Texture" id=11]
[ext_resource path="res://assets/bots/hover_bot/secondary_color/1.png" type="Texture" id=12]
[ext_resource path="res://assets/bots/hover_bot/secondary_color/2.png" type="Texture" id=13]
[ext_resource path="res://assets/bots/hover_bot/secondary_color/3.png" type="Texture" id=14]
[ext_resource path="res://assets/bots/hover_bot/secondary_color/4.png" type="Texture" id=15]
[ext_resource path="res://assets/bots/hover_bot/secondary_color/5.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]

resource_name = "hover_bot"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/base_layer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/primary_color:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/secondary_color:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "hover_bot",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "land_bot",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "hover_bot",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "land_bot",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]

animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "hover_bot",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "land_bot",
"speed": 5.0
} ]

[node name="animation_bot" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hover_bot = SubResource( 1 )
blend_times = [  ]

[node name="base_layer" type="AnimatedSprite" parent="AnimationPlayer" index="0"]

frames = SubResource( 2 )
animation = "hover_bot"
centered = false

[node name="primary_color" type="AnimatedSprite" parent="AnimationPlayer" index="1"]

modulate = Color( 0.00672913, 0.574219, 0.161902, 1 )
frames = SubResource( 3 )
animation = "hover_bot"
centered = false
_sections_unfolded = [ "Visibility" ]

[node name="secondary_color" type="AnimatedSprite" parent="AnimationPlayer" index="2"]

modulate = Color( 0.902344, 0.102219, 0.102219, 1 )
frames = SubResource( 4 )
animation = "hover_bot"
centered = false
_sections_unfolded = [ "Visibility" ]


